commit different style for header templayte

--- a/views/header.html
+++ b/views/header.html
@@ -10,13 +10,13 @@
         @import url(http://fonts.googleapis.com/css?family=Varela+Round);
         @import url(http://necolas.github.io/normalize.css/3.0.2/normalize.css);
         body {
-            background: #ECEEEF;
+            background: black;
             text-align: center;
             margin: 100px auto;
             max-width: 462px;
             padding: 0 40px;
             font: 18px normal 'Varela Round', Helvetica, serif;
-            color: #777B7E;
+            color: green;
         }
         
         img {
